--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
 
     // WebRTC
+    implementation 'org.webrtc:google-webrtc:1.0.+'
+    // libs 내 .jar 파일 참조
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
