--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:theme="@style/Theme.WebRTC"
         tools:ignore="HardcodedDebugMode">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -51,15 +51,15 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-<!--        <activity
-            android:name="SettingsActivity"
+        <activity
+            android:name=".activity.SettingsActivity"
             android:label="@string/settings_name"></activity>
         <activity
-            android:name="CallActivity"
+            android:name=".activity.CallActivity"
             android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
-            android:theme="@style/CallActivityTheme"></activity>-->
+            android:theme="@style/CallActivityTheme"></activity>
     </application>
 
 </manifest>
